--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "emoji-test-groups",
-  "version": "12.0.0",
-  "description": "Get emoji groups and subgroups from Unicode 12.0 test data file",
+  "version": "12.1.0",
+  "description": "Get emoji groups and subgroups from Emoji 12.1 test data file",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
@@ -17,6 +17,7 @@
   "keywords": [
     "emoji",
     "test",
+    "unicode",
     "groups",
     "subgroups",
     "component",
